sandbox/output
StringCalculator.java:9: error: illegal character: '`'
                    `+ Integer.parseInt(numberArray[1]);
                    ^
1 error
